src/forms/active.forms.css
#active-forms {
    width: 100%;
}

#active-forms table {
    width: 100%;
}

#active-forms table tr.header {
    border-bottom: 1px solid black;
}

#active-forms table td {    
    white-space: nowrap;
}
#active-forms table td.near-deadline {
    width: 5px;
    color: red;    
}
#active-forms table tbody tr:nth-child(even) td {
    background-color: rgb(240, 240, 240);
}
#my-cases-empty-label {
    font-style: italic
}

